fix unit test