@@ -7,7 +7,6 @@ import org.jetbrains.dokka.gradle.DokkaTask
 apply from: rootProject.file('publishing.gradle')
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'org.jetbrains.dokka'
 apply plugin: 'jacoco'
 
@@ -39,7 +38,7 @@ android {
 
     kotlinOptions {
         jvmTarget = '1.8'
-        freeCompilerArgs += ["-Xjvm-default=enable"]
+        freeCompilerArgs += ["-Xjvm-default=all"]
     }
 
     buildTypes {
@@ -61,6 +60,10 @@ android {
             jacoco {
                 includeNoLocationClasses = true
             }
+            jvmArgs(
+                    "--add-opens", "java.base/java.util=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+            )
         }
         // This causes system calls to return default (i.e. null or zero) values rather then
         // immediately throwing exceptions.  Without this, tests covering anything with significant OpenGLES or
@@ -145,11 +148,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3'
     testImplementation 'junit:junit:4.12'
-    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "io.mockk:mockk:1.13.12"
     // Android Test only
     androidTestImplementation 'androidx.test:core:1.3.0'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'io.mockk:mockk-android:1.10.0'
+    androidTestImplementation 'io.mockk:mockk-android:1.13.12'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.1.0'
 }
